--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "start:tunnel": "ngrok http 3000",
     "export": "next export",
     "build-stats": "cross-env ANALYZE=true npm run build",
     "build-prod": "run-s clean build export",
@@ -87,6 +88,7 @@
     "jest": "^29.2.2",
     "jest-environment-jsdom": "^29.2.2",
     "lint-staged": "^13.0.3",
+    "ngrok": "^4.3.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
